
This file shows the changes in recent releases of MODX. The most current release is usually the
development release, and is only shown to give an idea of what's currently in the pipeline.

- [#4738] Fix issue with inconsistent results in resourcelist TV
- [#4441] Fix FC issue when parent is constraint and trying to change default template
- [#4764] Fix issue with timestamp display on manager log page
- [#4680] Fix javascript error when typing Template name
- [#4681] Fix path issue which was causing 404 errors in the manager, IE 7-9
- [#4439] Add parentheses to list of disallowed password characters in installer
- [#4669] Fix button target size to make it more responsive to most clicks
- [#4625] Fix sizes of buttons and submit inputs in installer - IE 8 and 9
- [#4617] Fix custom values not being shown on Context Installation page during Advanced Upgrade
- [#4605] modX->switchContext() now checks load permission via Context ACLs
- [#4595] Fix display of modified/accessed times on Edit File page
- [#4594] Fix last login time displayed in Info block of Manager welcome page
- [#4470] Fix frozen URI not displayed when editing resource
- [#4572] Fix installer error log filenames (characters not allowed in Windows filenames)
- [#4585] Fix database connection processors in advanced upgrade
- Update xPDO to v2.1.3-pl
- [#4567] Remove calls to xPDO->log() in xPDOCacheManager->writeFile()
- [#4557] Minor fixes on Installer Options screen for Traditional package
- [#4556] Fix js error on Welcome screen of Traditional package's installer
- [#4076] Fix Edit/Quick Update context menu items in protected categories
- Fix Context Access query broken in RC4 changes for #4502

MODX Revolution 2.1.0-rc-4 (April 29, 2011)
====================================
- [#4543] Fix preview URLs when FURLs are turned Off
- [#4537] Trigger refreshURIs when related settings are modified
- Have modAccess*::loadAttributes() check access_*_enabled settings