@@ -2,6 +2,7 @@
 This file shows the changes in recent releases of MODX. The most current release is usually the
 development release, and is only shown to give an idea of what's currently in the pipeline.
 
+- Automatically focus cursor to first textfield on windows in mgr
 - [#4738] Fix issue with inconsistent results in resourcelist TV
 - [#4441] Fix FC issue when parent is constraint and trying to change default template
 - [#4764] Fix issue with timestamp display on manager log page
